# crewai-workshop-finish

research_team/: GITHUB_PAGES.md  IMPLEMENTATION_SUMMARY.md  README.md  convert_report.py  demo_workflow.py  open_report.py  pyproject.toml  report.md
research_team/.github/workflows/: deploy.yml
research_team/docs/: index.html
research_team/scripts/: __init__.py  convert_to_html.py
research_team/src/research_team/: crew.py  main.py
