[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-team"
version = "0.1.0"
description = "ResearchTeam crew"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "CrewAI", email = "contact@crewai.com"},
]
keywords = ["crewai", "ai", "agents", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "crewai>=0.70.0",
    "crewai-tools>=0.8.0",
    "markdown>=3.5.0",
    "jinja2>=3.1.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/joaomdmoura/crewai"
Documentation = "https://docs.crewai.com"
Repository = "https://github.com/joaomdmoura/crewai"
"Bug Tracker" = "https://github.com/joaomdmoura/crewai/issues"

[project.scripts]
research-team = "research_team.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/research_team"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["research_team"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=research_team",
    "--cov-report=term-missing",
    "--cov-report=html",
]
